[package]
name = "openarm01_backbone"
version = "0.1.0"
edition = "2024"

[dependencies]
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
sim_bridge_core = { path = "../../shared/sim_bridge_core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
